--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
-.main-container {
+section {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+}
+
+	.main-container {
 	padding-top: 10% !important;
 }
 
@@ -102,7 +107,7 @@ section {
 }
 
 .experience-img {
-	width: 10em;
+	width: 8em;
 }
 
 @media (max-width: 767px) { .experience-img {
